--- a/styles/style.css
+++ b/styles/style.css
@@ -52,7 +52,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 2em;
+
   width: 100%;
   height: 100vh;
 }
@@ -131,8 +131,8 @@ body.light-mode .video-bg:before {
 
 .app {
   background-color: var(--theme-bg-color);
-  max-width: 1550px;
-  max-height: 860px;
+  max-width: 95%;
+  max-height: 100%;
   height: 90vh;
   display: flex;
   flex-direction: column;
